Client conversation display working